            test script
        - API changes
          - IRatingPredictor
           - Add() is now AddRating()
           - remove AddUser() and AddItem()
          - IItemRecommender
           - remove AddUser() and AddItem()
          - Util.Recommender.Configure can now be called without a delegate
            argument.
	- recommenders
          - new rating predictor BiasedMatrixFactorizationMAE, which is BMF
            optimized for MAE instead of RMSE
          - BiasedMatrixFactorization: fixed a wrong constant factor in
            ComputeLoss()
          - BPRMF: add optional bold driver heuristic for learn rate adaptation
          - MatrixFactorization: use method from Eval namespace to compute fit
          - UserItemBaseline: use several iterations of alternating
            optimization instead of just one; implement IIterativeModel
	- command-line tools
          - item prediction: rename --predict-for-users-file to
            --relevant-users for consistency with --relevant-items
          - rating prediction: support all IIterativeModel recommenders, not
            just the ones derived from MatrixFactorization
          - write out predictions every N iterations with --prediction-file=F
            and --find-iter=N (bug reported by Alejandro Bellogin)
          - write loading time to STDERR, not STDOUT
          - support online evaluation (see below)
	- evaluation
          - RatingEval
            - add EvaluateOnline() method
            - rename RatingPredictionMeasures to Measures
          - ItemPredictionEval
            - add EvaluateOnline() method
            - rename ItemPredictionMeasures to Measures
        - data structures
          - add interfaces IBooleanMatrix and IPosOnlyFeedback
          - make PosOnlyFeedback generic to allow different backends
          - add SparseBooleanMatrixBinarySearch and SparseBooleanMatrixStatic
          - IMatrix<T> interface: add Transpose() method