@@ -10,6 +10,7 @@
            - remove AddUser() and AddItem()
           - Util.Recommender.Configure can now be called without a delegate
             argument.
+          - IIterativeModel: NumIter is now uint instead of int
 	- recommenders
           - new rating predictor BiasedMatrixFactorizationMAE, which is BMF
             optimized for MAE instead of RMSE
